// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages > CreateSocialMediaPost > should render correctly with inputs and no errors 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          alpha
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <form
        action="/api/create-social-media-post?_csrf="
        encType="multipart/form-data"
        method="post"
      >
        <div
          className="govuk-form-group"
        >
          <h1
            className="govuk-heading-xl"
          >
            Social media message
          </h1>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
              id="message-content"
            >
              <label
                className="govuk-label govuk-label--l"
                htmlFor="message-content-input"
              >
                Message content
              </label>
              <div
                className="govuk-hint"
                id="message-content-hint"
              >
                You can enter up to 200 characters
              </div>
              <div
                className=""
              >
                <textarea
                  aria-describedby="message-content-hint"
                  className="govuk-textarea w-3/4"
                  defaultValue="Test post 12345"
                  id="message-content-input"
                  maxLength={500}
                  name="messageContent"
                  onChange={[Function]}
                  rows={3}
                />
              </div>
            </div>
          </div>
          <br />
          <div
            className="govuk-form-group"
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend govuk-fieldset__legend--m"
              >
                <h2
                  className="govuk-fieldset__heading govuk-visually-hidden"
                  id="passenger-type-page-heading"
                >
                  Upload file
                </h2>
              </legend>
              <div
                className=""
              >
                <input
                  accept="image/png, image/jpeg, image/jpg"
                  className="govuk-file-upload"
                  id="image"
                  name="image"
                  type="file"
                />
              </div>
            </fieldset>
          </div>
        </div>
        <div
          className="govuk-form-group"
        >
          <h2
            className="govuk-heading-l"
          >
            Publish time and date
          </h2>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group govuk-!-margin-bottom-0"
              id="publish-date"
            >
              <label
                className="govuk-label govuk-label--s"
                htmlFor="publish-date-input"
              >
                Date
              </label>
              <div
                className="govuk-hint"
              >
                Enter in format DD/MM/YYYY
              </div>
              <div
                className="flex flex-col"
              >
                <div
                  className="govuk-date-input flex flex-row [&_.MuiSvgIcon-root]:fill-govBlue"
                >
                  <div
                    className="govuk-date-input__item govuk-!-margin-right-0"
                  >
                    <div
                      className=""
                    >
                      <input
                        className="govuk-input govuk-date-input__input govuk-input--width-6"
                        disabled={false}
                        id="publish-date-input"
                        name="publishDate"
                        onChange={[Function]}
                        placeholder="DD/MM/YYYY"
                        type="tel"
                        value="19/06/2023"
                      />
                    </div>
                  </div>
                  <div
                    className="flex items-end pb-5"
                  >
                    <div
                      className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
                    >
                      <button
                        aria-label="Choose date, selected date is Jun 19, 2023"
                        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="CalendarIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
              id="publish-time"
            >
              <label
                className="govuk-label govuk-label--s"
                htmlFor="publish-time-input"
              >
                Time
              </label>
              <div
                className="govuk-hint"
                id="publish-time-hint"
              >
                Enter the time in 24hr format. For example 0900 is 9am, 1730 is 5:30pm
              </div>
              <div
                className=""
              >
                <div>
                  <div
                    className=""
                  >
                    <input
                      aria-describedby="publish-time-hint"
                      className="govuk-input govuk-date-input__input govuk-input--width-4"
                      defaultValue="1805"
                      disabled={false}
                      id="publish-time-input"
                      name="publishTime"
                      onChange={[Function]}
                      placeholder="hhmm"
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group govuk-!-padding-top-3"
          >
            <h2
              className="govuk-heading-l"
            >
              Select social media account
            </h2>
            <div
              className="govuk-form-group"
            >
              <div
                className="govuk-form-group"
                id="social-account"
              >
                <label
                  className="govuk-label govuk-label--l"
                  htmlFor="social-account-input"
                />
                <div
                  className=""
                >
                  <select
                    className="govuk-select w-3/4"
                    defaultValue="13958638"
                    id="social-account-input"
                    name="socialAccount"
                    onChange={[Function]}
                  >
                    <option
                      disabled={true}
                      value=""
                    >
                      Social account
                    </option>
                    <option
                      value="25858639"
                    >
                      testemail@gmail.com
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="govuk-form-group"
            >
              <div
                className="govuk-form-group"
                id="hootsuite-profile"
              >
                <label
                  className="govuk-label govuk-label--l"
                  htmlFor="hootsuite-profile-input"
                />
                <div
                  className="govuk-hint"
                  id="hootsuite-profile-hint"
                >
                  Select Hootsuite profile
                </div>
                <div
                  className=""
                >
                  <select
                    aria-describedby="hootsuiteProfile-hint"
                    className="govuk-select w-3/4"
                    defaultValue="127196025"
                    id="hootsuite-profile-input"
                    name="hootsuiteProfile"
                    onChange={[Function]}
                  >
                    <option
                      disabled={true}
                      value=""
                    >
                      Social account
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </div>
          <input
            name="disruptionId"
            type="hidden"
          />
          <input
            name="socialMediaPostIndex"
            type="hidden"
            value={0}
          />
          <button
            className="govuk-button mt-8"
            data-module="govuk-button"
          >
            Save and continue
          </button>
        </div>
      </form>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`pages > CreateSocialMediaPost > should render correctly with no inputs 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          alpha
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <form
        action="/api/create-social-media-post?_csrf="
        encType="multipart/form-data"
        method="post"
      >
        <div
          className="govuk-form-group"
        >
          <h1
            className="govuk-heading-xl"
          >
            Social media message
          </h1>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
              id="message-content"
            >
              <label
                className="govuk-label govuk-label--l"
                htmlFor="message-content-input"
              >
                Message content
              </label>
              <div
                className="govuk-hint"
                id="message-content-hint"
              >
                You can enter up to 200 characters
              </div>
              <div
                className=""
              >
                <textarea
                  aria-describedby="message-content-hint"
                  className="govuk-textarea w-3/4"
                  id="message-content-input"
                  maxLength={500}
                  name="messageContent"
                  onChange={[Function]}
                  rows={3}
                />
              </div>
            </div>
          </div>
          <button
            className="mt-3 govuk-link"
            data-module="govuk-button"
            onClick={[Function]}
          >
            <p
              className="text-govBlue govuk-body-m"
            >
              Copy from disruption summary
            </p>
          </button>
          <br />
          <div
            className="govuk-form-group"
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend govuk-fieldset__legend--m"
              >
                <h2
                  className="govuk-fieldset__heading govuk-visually-hidden"
                  id="passenger-type-page-heading"
                >
                  Upload file
                </h2>
              </legend>
              <div
                className=""
              >
                <input
                  accept="image/png, image/jpeg, image/jpg"
                  className="govuk-file-upload"
                  id="image"
                  name="image"
                  type="file"
                />
              </div>
            </fieldset>
          </div>
        </div>
        <div
          className="govuk-form-group"
        >
          <h2
            className="govuk-heading-l"
          >
            Publish time and date
          </h2>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group govuk-!-margin-bottom-0"
              id="publish-date"
            >
              <label
                className="govuk-label govuk-label--s"
                htmlFor="publish-date-input"
              >
                Date
              </label>
              <div
                className="govuk-hint"
              >
                Enter in format DD/MM/YYYY
              </div>
              <div
                className="flex flex-col"
              >
                <div
                  className="govuk-date-input flex flex-row [&_.MuiSvgIcon-root]:fill-govBlue"
                >
                  <div
                    className="govuk-date-input__item govuk-!-margin-right-0"
                  >
                    <div
                      className=""
                    >
                      <input
                        className="govuk-input govuk-date-input__input govuk-input--width-6"
                        disabled={false}
                        id="publish-date-input"
                        name="publishDate"
                        onChange={[Function]}
                        placeholder="DD/MM/YYYY"
                        type="tel"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="flex items-end pb-5"
                  >
                    <div
                      className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
                    >
                      <button
                        aria-label="Choose date"
                        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="CalendarIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                          />
                        </svg>
                        <span
                          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
              id="publish-time"
            >
              <label
                className="govuk-label govuk-label--s"
                htmlFor="publish-time-input"
              >
                Time
              </label>
              <div
                className="govuk-hint"
                id="publish-time-hint"
              >
                Enter the time in 24hr format. For example 0900 is 9am, 1730 is 5:30pm
              </div>
              <div
                className=""
              >
                <div>
                  <div
                    className=""
                  >
                    <input
                      aria-describedby="publish-time-hint"
                      className="govuk-input govuk-date-input__input govuk-input--width-4"
                      disabled={false}
                      id="publish-time-input"
                      name="publishTime"
                      onChange={[Function]}
                      placeholder="hhmm"
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group govuk-!-padding-top-3"
          >
            <h2
              className="govuk-heading-l"
            >
              Select social media account
            </h2>
            <div
              className="govuk-form-group"
            >
              <div
                className="govuk-form-group"
                id="social-account"
              >
                <label
                  className="govuk-label govuk-label--l"
                  htmlFor="social-account-input"
                />
                <div
                  className=""
                >
                  <select
                    className="govuk-select w-3/4"
                    defaultValue=""
                    id="social-account-input"
                    name="socialAccount"
                    onChange={[Function]}
                  >
                    <option
                      disabled={true}
                      value=""
                    >
                      Social account
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="govuk-form-group"
            >
              <div
                className="govuk-form-group"
                id="hootsuite-profile"
              >
                <label
                  className="govuk-label govuk-label--l"
                  htmlFor="hootsuite-profile-input"
                />
                <div
                  className="govuk-hint"
                  id="hootsuite-profile-hint"
                >
                  Select Hootsuite profile
                </div>
                <div
                  className=""
                >
                  <select
                    aria-describedby="hootsuiteProfile-hint"
                    className="govuk-select w-3/4"
                    defaultValue=""
                    id="hootsuite-profile-input"
                    name="hootsuiteProfile"
                    onChange={[Function]}
                  >
                    <option
                      disabled={true}
                      value=""
                    >
                      Social account
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </div>
          <input
            name="disruptionId"
            type="hidden"
          />
          <input
            name="socialMediaPostIndex"
            type="hidden"
            value={0}
          />
          <button
            className="govuk-button mt-8"
            data-module="govuk-button"
          >
            Save and continue
          </button>
        </div>
      </form>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;
